# AutoPipe-Automated-CI-CD-Pipeline-Generator

./: .gitignore  DOCKER_SETUP.md  QUICK_START.md  README.md  SETUP_GUIDE.md  credentials.txt  docker-compose.yml  install.bat  install.ps1  install.sh  k3d-registries.yaml  k8s-gitlab-sa.yaml  pyproject.toml  runner-config.toml
autopipe/: __main__.py  cli.py
autopipe/core/: analyzer.py  fetcher.py  interfaces.py  models.py  reporter.py  resolver.py
autopipe/detectors/: dotnet_detector.py  go_detector.py  java_detector.py  java_detector_ant_method.txt  nodejs_detector.py  php_detector.py  python_detector.py
autopipe/generators/: generator.py
autopipe/integrations/: __init__.py  platform_manager.py
autopipe/validators/: validator.py
docs/: AUTOPIPE_DOCUMENTATION.md
examples/dotnet-api/: Dockerfile
examples/go-service/: Dockerfile
examples/nodejs-react/: Dockerfile
examples/php-laravel/: Dockerfile
real_world_tests/cassandra/: Dockerfile
real_world_tests/ghost/: Dockerfile
real_world_tests/gitea/: Dockerfile
real_world_tests/home-assistant/: Dockerfile
real_world_tests/kafka/: Dockerfile
real_world_tests/keycloak/: Dockerfile
real_world_tests/minio/: Dockerfile
real_world_tests/n8n/: Dockerfile
real_world_tests/odoo/: Dockerfile
real_world_tests/pixelfed/: Dockerfile
real_world_tests/rocketchat/: Dockerfile
real_world_tests/strapi/: Dockerfile
scripts/: quick-start.ps1  runner-entrypoint.sh  setup-gitlab.ps1  setup-gitlab.sh
templates/: Dockerfile.j2  gitlab-ci.j2
tests/: test_detectors.py  test_e2e.py
(+12 files in other folders)
