[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autopipe"
version = "0.1.0"
description = "Deterministic CI/CD Pipeline Generator"
requires-python = ">=3.10"
authors = [
  {name = "AutoPipe Architect", email = "architect@autopipe.local"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "packaging>=23.0",
    "requests>=2.28.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
autopipe = "autopipe.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autopipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
